--- a/homework_react/homework_react_1_WeatherApp/src/components/Search/search.module.css
+++ b/homework_react/homework_react_1_WeatherApp/src/components/Search/search.module.css
@@ -23,6 +23,10 @@ input:focus {
     border: none;
     padding: 0;
 }
+button:hover {
+    cursor: pointer;
+}
+
 .img {
     padding: 10px ;
     height: 20px;
